# fastcpc

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: cpc_small.json
scripts/: __init__.py  librispeech_manifest.py
slurm/: README.md  accelerate.yaml  launcher.slurm
src/fastcpc/: __init__.py  __main__.py  augmentation.py  callbacks.py  config.py  criterion.py  data.py  features.py  maml.py  model.py  rotary.py  train.py  utils.py
