[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fastcpc"
version = "0.1"
requires-python = ">=3.11"
authors = [{ name = "Maxime Poli" }]
dependencies = [
    "accelerate",
    "huggingface_hub",
    "torch>=2.2.2",
    "torchaudio",
    "tqdm",
    "numpy",
    "more_itertools",
    "polars",
    "wandb",
]

[project.scripts]
fastcpc = "fastcpc.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
isort.known-first-party = ["fastcpc"]
select = ["ALL"]
ignore = [
    "ANN101", # deprecated rule
    "PLR0913", # too-many-arguments
    "PLR0915", # too-many-statements
    "COM812", # missing-trailing-comma
    "ISC001", # single-line-implicit-string-concatenation
    "D102", # undocumented-public-method
    "D103", # undocumented-public-function
    "D105", # undocumented-magic-method
    "D107", # undocumented-public-init
    "D203", # one-blank-line-before-class
    "D213", # multi-line-summary-second-line
]

[tool.typos]
default.extend-words = { dout = "dout" }
